@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add randomized iterators for tables.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Misc logging changes in the walshaw algorithm. Few bugfixes. In
 	particular, the coarsening stops when there are no further edges to be
 	contracted (which happens if the graphs is entirely disconnected).
